--- a/src/app/pages/components/schedules-detailed/schedule-detailed-header/schedule-detailed-header.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-header/schedule-detailed-header.component.scss
@@ -50,7 +50,14 @@
   }
 
   .grid-icon {
-    margin: 0 3px 0 auto;
+    margin: 0 3px 0;
+  }
+
+  .actions-container {
+    margin-left: auto;
+    margin-right: 9px;
+    display: flex;
+    align-items: center;
   }
 
   .list-icon {
@@ -70,4 +77,8 @@
     height: 38px;
     background: rgba(0,0,0,0.15);
   }
+}
+
+.action-inactive {
+  color: rgba(0,0,0,0.18) !important;
 }
