--- a/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.scss
@@ -26,15 +26,6 @@
       div {
         cursor: pointer;
       }
-
-      .button {
-        margin-left: auto;
-        font-size: 12px;
-        color: white;
-        background: #EF4339;
-        font-weight: 500;
-        padding: 6px 16px;
-      }
     }
 
     .body {
@@ -65,15 +56,8 @@
       div {
         font-size: 12px;
         cursor: pointer;
-
-        &:first-of-type {
-          margin-left: auto;
-        }
-
-        &:last-of-type {
-          margin-left: 8px;
-          color: #4A90E2;
-        }
+        margin-left: auto;
+        color: #4A90E2;
       }
     }
   }
@@ -186,4 +170,13 @@
       }
     }
   }
+}
+
+.red-button {
+  margin-left: auto;
+  font-size: 12px;
+  color: white;
+  background: #EF4339;
+  font-weight: 500;
+  padding: 6px 16px;
 }
