--- a/src/app/pages/components/schedules-detailed/schedules-detailed.component.html
+++ b/src/app/pages/components/schedules-detailed/schedules-detailed.component.html
@@ -3,6 +3,8 @@
   [zoomLevel]="zoomLevel"
   [sideVisible]="sideVisible"
   [singleScheduleMode]="singleScheduleMode"
+  (undo)="undo()"
+  (revert)="revert()"
   (sideVisibleChanged)="sideVisible = $event"
   (zoomChanged)="zoomLevel = $event"
   (displayModeChanged)="changeDisplayMode($event)"
@@ -12,17 +14,18 @@
 <div class="flex-custom">
   <schedule-detailed-list
     [singleScheduleMode]="singleScheduleMode"
-    [productSchedules]="productSchedules | filterStrings: filterProductSchedulesValue: productScheduleFilterMapper"
+    [productSchedules]="schedulesHistory[historyIndex] | filterStrings: filterProductSchedulesValue: productScheduleFilterMapper"
     [sideVisible]="sideVisible"
     [products]="products"
     (newProductScheduleAdded)="addNewProductSchedule($event)"
     (selected)="selectDetails($event)">
   </schedule-detailed-list>
   <schedule-detailed-timeline
-    [productSchedules]="productSchedules | filterStrings: filterProductSchedulesValue: productScheduleFilterMapper"
+    [productSchedules]="schedulesHistory[historyIndex] | filterStrings: filterProductSchedulesValue: productScheduleFilterMapper"
     [singleScheduleMode]="singleScheduleMode"
     [zoomLevel]="zoomLevel"
     [start]="startDate"
+    (scheduleChanged)="createNewState(true)"
     (selected)="selectDetails($event)">
   </schedule-detailed-timeline>
 </div>
@@ -33,8 +36,10 @@
     [products]="products"
     [schedule]="selectedSchedule"
     [startDate]="startDate"
-    (save)="save.emit(true)"
+    (focusSchedule)="selectDetails($event)"
+    (save)="createNewState(true)"
     (deleteSchedule)="removeSchedule($event)"
+    (deleteProductSchedule)="removeProductSchedule($event)"
     (close)="deselectSchedule()">
   </schedule-details>
 </ng-template>
