--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
@@ -32,8 +32,7 @@
           [singleScheduleMode]="true"
           [productSchedules]="[entity]"
           [startDate]="startDate"
-          (save)="saveEmitted()"
-          (deleteSchedule)="deleteSchedule($event)"
+          (productSchedulesChanged)="productSchedulesChanged($event)"
           (detailsComponent)="setDetails($event)">
         </schedules-detailed>
       </md-tab>
