--- a/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.scss
@@ -80,6 +80,8 @@
       display: flex;
       padding: 0 12px;
       border-top: 1px solid rgba(0,0,0,0.2);
+      height: 45px;
+      line-height: 45px;
 
       div {
         margin-left: 3px;
