--- a/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.html
+++ b/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.html
@@ -42,7 +42,7 @@
         <autocomplete-input
           [fullWidth]="true"
           [initialValue]="_scheduleBackup.product"
-          [options]="products"
+          [options]="allProducts"
           [applyAutofocus]="false"
           [placeholder]="'Product'"
           [mapFunction]="productMapper"
@@ -77,7 +77,7 @@
           class="session-autocomplete"
           [initialValue]="productToAdd"
           [fullWidth]="true"
-          [options]="products"
+          [options]="allProducts"
           [applyAutofocus]="false"
           [placeholder]="'Add Product'"
           [mapFunction]="productMapper"
