--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
@@ -29,6 +29,7 @@
 
       <md-tab>
         <schedules-detailed
+          [statusMessage]="updateError ? 'Error occured on save' : productScheduleWaitingForUpdate ? 'Saving...' : 'All changes saved'"
           [singleScheduleMode]="true"
           [productSchedules]="[entity]"
           [startDate]="startDate"
