--- a/src/app/pages/components/schedules-detailed/schedule-detailed-header/schedule-detailed-header.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-header/schedule-detailed-header.component.scss
@@ -82,3 +82,11 @@
 .action-inactive {
   color: rgba(0,0,0,0.18) !important;
 }
+
+.search-input {
+  margin-right: 7px;
+}
+
+.saving {
+  margin-left: 5px;
+}
