--- a/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
@@ -58,7 +58,7 @@
   overflow: hidden;
   background-position-y: 20px;
   background-image: linear-gradient(to right, white 1px, transparent 1px), linear-gradient(to bottom, white 1px, transparent 1px);
-  transition: background-size 250ms ease-in-out;
+  transition: background-size 250ms ease-in-out, background-position-x 250ms ease-in-out;
 
   .date-placeholder {
     position: absolute;
@@ -172,5 +172,34 @@
       margin-right: -4px;
       cursor: col-resize;
     }
+  }
+}
+
+.product-container {
+  display: flex;
+  align-items: center;
+  height: 46px;
+  transition: margin 250ms ease-in-out;
+
+  .image {
+    display: flex;
+    margin-right: 12px;
+    width: 34px;
+    height: 34px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    border: 2px solid #2FC362;
+
+    &--default {
+      background-image: url("/assets/images/product-image-placeholder.svg");
+    }
+  }
+
+  .text {
+    font-size: 12px;
+    color: #186E37;
+    font-weight: 500;
   }
 }
