--- a/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
@@ -164,7 +164,27 @@
     }
 
     .body {
-      width: 100%;
+      display: flex;
+      align-items: center;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+      width: calc(100% - 6px);
+    }
+
+    .order {
+      display: flex;
+      align-items: center;
+      margin-right: 3px;
+      border-radius: 50%;
+      min-width: 18px;
+      height: 18px;
+      line-height: 18px;
+
+      span {
+        margin: 0 auto;
+        font-size: 10px;
+      }
     }
 
     .resizer {
