--- a/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
@@ -1,18 +1,6 @@
-.top-line {
-  position: relative;
-  height: 26px;
-  line-height: 26px;
-  width: 100%;
-  background: white;
-  font-size: 12px;
-  font-weight: 500;
-  color: #4a4a4a;
-  padding-left: 5px;
-}
-
 .view-container {
   min-width: 100%;
-  height: calc(100% - 26px);
+  height: 100%;
   width: 1px;
   overflow: auto;
   min-height: calc(100vh - 420px);
@@ -56,16 +44,16 @@
   position: relative;
   height: 100%;
   overflow: hidden;
-  background-position-y: 20px;
+  background-position-y: 46px;
   background-image: linear-gradient(to right, white 1px, transparent 1px), linear-gradient(to bottom, white 1px, transparent 1px);
   transition: background-size 250ms ease-in-out, background-position-x 250ms ease-in-out;
 
   .date-placeholder {
     position: absolute;
-    top: 0;
+    top: 22px;
     z-index: 2;
     height: 100%;
-    transition: left 0.6s cubic-bezier(0.35, 0, 0.25, 1);
+    transition: left 250ms ease-in-out;
 
     &__box {
       padding: 4px 6px;
@@ -98,14 +86,14 @@
 
   .timeline-header {
     position: relative;
-    height: 20px;
+    height: 46px;
 
     div {
       position: absolute;
       display: inline-block;
       width: 65px;
       background: #F3F3F3;
-      height: 20px;
+      height: 46px;
       line-height: 20px;
       font-size: 10px;
       color: rgba(0,0,0,0.45);
@@ -132,6 +120,30 @@
     .bar {
       border: 3px solid #24F5FE;
       margin: -3px;
+    }
+  }
+
+  .cycle-flag {
+    position: absolute;
+    width: 2px;
+    top: 22px;
+    background: #8C8787;
+    transition: height 0.6s cubic-bezier(0.35, 0, 0.25, 1), left 250ms ease-in-out;
+
+    &--slow {
+      transition: left 50ms ease-in-out;
+    }
+
+    .date-box {
+      position: absolute;
+      top: 0;
+      padding: 4px 6px;
+      border-radius: 0 3px 3px 0;
+      background: #8C8787;
+      color: white;
+      font-weight: 500;
+      font-size: 9px;
+      white-space: nowrap;
     }
   }
 
