--- a/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.scss
@@ -43,14 +43,17 @@
 
       span {
         margin-right: auto;
-        font-size: 12px;
+        font-size: 10px;
         font-weight: 500;
         color: #8e8e8e;
       }
 
       md-icon {
-        margin-left: auto;
-        margin-right: 10px;
+        margin-left: 8px;
+        margin-right: 8px;
+        height: 22px;
+        width: 22px;
+        font-size: 22px;
       }
     }
   }
