--- a/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.scss
@@ -121,7 +121,7 @@
       padding: 15px 12px;
       font-size: 18px;
 
-      div:last-of-type {
+      div:nth-of-type(2) {
         margin-left: auto;
         font-size: 12px;
         cursor: pointer;
