--- a/src/app/pages/components/schedules-detailed/schedules-detailed.component.html
+++ b/src/app/pages/components/schedules-detailed/schedules-detailed.component.html
@@ -4,7 +4,10 @@
   [sideVisible]="sideVisible"
   [singleScheduleMode]="singleScheduleMode"
   [statusMessage]="statusMessage"
+  [redoEnabled]="historyIndex < (schedulesHistory.length - 1)"
+  [undoEnabled]="historyIndex !== 0 && (consecutiveUndo || historyIndex !== 1)"
   (undo)="undo()"
+  (redo)="redo()"
   (revert)="revert()"
   (sideVisibleChanged)="sideVisible = $event"
   (zoomChanged)="zoomLevel = $event"
