--- a/src/app/pages/components/schedules-detailed/schedule-detailed-header/schedule-detailed-header.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-header/schedule-detailed-header.component.scss
@@ -54,10 +54,18 @@
   }
 
   .actions-container {
-    margin-left: auto;
-    margin-right: 9px;
+    margin-right: auto;
     display: flex;
     align-items: center;
+
+    .revert {
+      margin-right: 6px;
+      cursor: pointer;
+    }
+
+    &--solo {
+      margin-left: 6px;
+    }
   }
 
   .list-icon {
@@ -88,5 +96,5 @@
 }
 
 .saving {
-  margin-left: 5px;
+  margin-left: 8px;
 }
