work on translations

--- a/src/app/navigation/notifications-quick/notifications-quick.component.html
+++ b/src/app/navigation/notifications-quick/notifications-quick.component.html
@@ -30,7 +30,7 @@
             <div class="notifications-list__content__notification" (click)="readNotification(notification)">
               <div class="notifications-list__content__notification__image"><img src="assets/images/{{notification.getIconName()}}" alt=""></div>
               <div class="notifications-list__content__notification__message">
-                <div>{{notification.name}}</div>
+                <div>{{notification.body}}</div>
                 <div class="notifications-list__content__notification__message__date">
                   {{notification.createdAt.format('MMMM Do [at] h:mm A')}}
                 </div>
