--- a/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-timeline/schedule-detailed-timeline.component.scss
@@ -213,6 +213,10 @@
   height: 46px;
   transition: margin 250ms ease-in-out;
 
+  div {
+    cursor: pointer;
+  }
+
   .image {
     display: flex;
     margin-right: 12px;
