--- a/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.scss
+++ b/src/app/pages/components/schedules-detailed/schedule-detailed-list/schedule-detailed-list.component.scss
@@ -102,7 +102,7 @@
       }
 
       .rotated {
-        transform: rotate(90deg);
+        transform: rotate(-90deg);
         transition: 0.25s ease-in-out;
       }
     }
@@ -178,6 +178,7 @@
   display: flex;
   align-items: center;
   height: 46px;
+  margin-bottom: 185px;
 
   autocomplete-input {
     margin-left: 15px;
